fix test failure, updated DistUpgrade/patches/README, add missing fstab patchfile

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ update-manager (1:0.147) UNRELEASEDnatty; urgency=low
     - use apt_clone.py from the apt-clone package
   * debian/control:
     - add apt-clone to the build-depends
+  * DistUpgrade/DistUpgradePatcher.py:
+    - add native ed-style patch implementation as e.g. chroots
+      may not have ed installed and its critical to be able to 
+      ensure that pycompile is correct before the upgrade starts
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200
 
