* do-release-upgrade:   - use apt.progress.text.AcquireProgress to fix deprecation warning

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ update-manager (1:0.147) UNRELEASEDnatty; urgency=low
     - add native ed-style patch implementation as e.g. chroots
       may not have ed installed and its critical to be able to 
       ensure that pycompile is correct before the upgrade starts
+  * do-release-upgrade:
+    - use apt.progress.text.AcquireProgress to fix deprecation warning
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200
 
