* DistUpgrade/DistUpgradeAptCdrom.py:   - fixes with the python-apt 0.8 API

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ update-manager (1:0.147) UNRELEASEDnatty; urgency=low
   * DistUpgrade/DistUpgradeViewText.py:
     - fix deprecation warning (LP: #744990)
   * fix deprecation warnings in auxiliary scripts
+  * DistUpgrade/DistUpgradeAptCdrom.py:
+    - fixes with the python-apt 0.8 API
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200
 
