--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.147) UNRELEASEDnatty; urgency=low
+update-manager (1:0.147) natty; urgency=low
 
   [ Brian Murray]
   * UpdateManager/ReleaseNotesViewer.py: fix the path for gnome-open
@@ -21,7 +21,7 @@ update-manager (1:0.147) UNRELEASEDnatty; urgency=low
   * DistUpgrade/DistUpgradeAptCdrom.py:
     - fixes with the python-apt 0.8 API
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 31 Mar 2011 17:58:14 +0200
 
 update-manager (1:0.146.6) natty; urgency=low
 
