* UpdateManager/backend/InstallBackendAptdaemon.py:   - use pkgsystem_unlock, improve exception handling, add test

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.147.1) UNRELEASED; urgency=low
+
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - use pkgsystem_unlock, improve exception handling, add test
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Apr 2011 11:02:10 +0200
+
 update-manager (1:0.147) natty; urgency=low
 
   [ Brian Murray]
