* DistUpgrade/DistUpgradeQuirks.py:   - add quirks handler for maverick->natty upgrade for the     kdegames-card-data case (LP: #745396) * tests/test_quirks.py:   - add test for LP: #745396

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ update-manager (1:0.147.1) UNRELEASED; urgency=low
 
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - use pkgsystem_unlock, improve exception handling, add test
+  * DistUpgrade/DistUpgradeQuirks.py: 
+    - add quirks handler for maverick->natty upgrade for the 
+      kdegames-card-data case (LP: #745396)
+  * tests/test_quirks.py:
+    - add test for LP: #745396
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Apr 2011 11:02:10 +0200
 
