* UpdateManager/UpdateManager.py, do-release-upgrade:   - point to http://www.ubuntu.com/releaseendoflife when the release     is end-of-life message is displayed (LP: #671016)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ update-manager (1:0.147.1) UNRELEASED; urgency=low
       kdegames-card-data case (LP: #745396)
   * tests/test_quirks.py:
     - add test for LP: #745396
+  * UpdateManager/UpdateManager.py, do-release-upgrade:
+    - point to http://www.ubuntu.com/releaseendoflife when the release
+      is end-of-life message is displayed (LP: #671016)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Apr 2011 11:02:10 +0200
 
