* DistUpgrade/EOLReleaseAnnouncement:   - improve wording, this is displayed if the user is trying to upgrade     from a unsupported version of Ubuntu to a already unsupported     version. This now links to  http://www.ubuntu.com/releaseendoflife     (LP: #671016)

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,11 @@ update-manager (1:0.147.1) UNRELEASED; urgency=low
   * UpdateManager/UpdateManager.py, do-release-upgrade:
     - point to http://www.ubuntu.com/releaseendoflife when the release
       is end-of-life message is displayed (LP: #671016)
+  * DistUpgrade/EOLReleaseAnnouncement:
+    - improve wording, this is displayed if the user is trying to upgrade
+      from a unsupported version of Ubuntu to a already unsupported
+      version. This now links to  http://www.ubuntu.com/releaseendoflife
+      (LP: #671016)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Apr 2011 11:02:10 +0200
 
