--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.147.1) UNRELEASED; urgency=low
+update-manager (1:0.147.1) natty; urgency=low
 
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - use pkgsystem_unlock, improve exception handling, add test
@@ -16,7 +16,7 @@ update-manager (1:0.147.1) UNRELEASED; urgency=low
       version. This now links to  http://www.ubuntu.com/releaseendoflife
       (LP: #671016)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Apr 2011 11:02:10 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Apr 2011 11:31:50 +0200
 
 update-manager (1:0.147) natty; urgency=low
 
