--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 update-manager (1:0.147.2) UNRELEASED; urgency=low
 
-  * merge patch from glatzor to catch exceptions from aptdaemon
+  * no not trigger a apport exception if the user can not be authenticated
+    (LP: #626798)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Apr 2011 15:08:56 +0200
 
