--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 update-manager (1:0.147.2) UNRELEASED; urgency=low
 
-  * no not trigger a apport exception if the user can not be authenticated
-    (LP: #626798)
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - no not trigger a apport exception on user auth issues and if
+      the user does not type the password in time (LP: #626798)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Apr 2011 15:08:56 +0200
 
