--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-update-manager (1:0.147.2) UNRELEASED; urgency=low
+update-manager (1:0.147.2) natty; urgency=low
 
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - no not trigger a apport exception on user auth issues and if
       the user does not type the password in time (LP: #626798)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Apr 2011 15:08:56 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Apr 2011 15:49:58 +0200
 
 update-manager (1:0.147.1) natty; urgency=low
 
