--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.147.3) UNRELEASED; urgency=low
+update-manager (1:0.147.3) natty; urgency=low
 
   * merged lp:~evfool/update-manager/fix665173 (LP: #665173),
     many thanks to Robert Roth (update the test a bit)
@@ -7,7 +7,7 @@ update-manager (1:0.147.3) UNRELEASED; urgency=low
   * merged lp:~evfool/update-manager/fix727069 (LP: #727069),
     many thanks to Robert Roth 
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Apr 2011 21:27:51 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Apr 2011 17:32:35 +0200
 
 update-manager (1:0.147.2) natty; urgency=low
 
