* DistUpgrade/DistUpgradeViewKDE.py  - Allow to view differences in conf file changes LP: #746431

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.147.4) natty; urgency=low
+
+  * DistUpgrade/DistUpgradeViewKDE.py
+   - Allow to view differences in conf file changes LP: #746431
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 07 Apr 2011 14:42:15 +0100
+
 update-manager (1:0.147.3) natty; urgency=low
 
   * merged lp:~evfool/update-manager/fix665173 (LP: #665173),
