* DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:   - fix ssh detection (LP: #744995)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.147.5) unstable; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
+    - fix ssh detection (LP: #744995)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Apr 2011 17:48:31 +0200
+
 update-manager (1:0.147.4) natty; urgency=low
 
   * DistUpgrade/DistUpgradeViewKDE.py
