* AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg:   - updated for maverick->natty now that the auto-upgrade-test server     has more diskspace

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.147.6) natty; urgency=low
+
+  * AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg:
+    - updated for maverick->natty now that the auto-upgrade-test server
+      has more diskspace
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Apr 2011 10:40:17 +0200
+
 update-manager (1:0.147.5) natty; urgency=low
 
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
