* DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:   - make running-under-ssh check more robust by looking for sshd parent

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-update-manager (1:0.147.6) natty; urgency=low
+update-manager (1:0.147.6) UNRELEASED; urgency=low
 
   * AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg:
     - updated for maverick->natty now that the auto-upgrade-test server
       has more diskspace
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
+    - make running-under-ssh check more robust by looking for sshd parent
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Apr 2011 10:40:17 +0200
 
