* DistUpgrade/DistUpgradeViewText.py:   - make user confirm information() messages before continuing     (important for e.g. the "sshd has started" message)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ update-manager (1:0.147.6) UNRELEASED; urgency=low
       has more diskspace
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
     - make running-under-ssh check more robust by looking for sshd parent
+  * DistUpgrade/DistUpgradeViewText.py:
+    - make user confirm information() messages before continuing
+      (important for e.g. the "sshd has started" message)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Apr 2011 10:40:17 +0200
 
