add euca-nc and euca-cloud test upgrade profiles

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 update-manager (1:0.147.6) UNRELEASED; urgency=low
 
-  * AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg:
+  * AutoUpgradeTester/profile/{euca-cloud,euca-nc,xubuntu}/DistUpgrade.cfg:
     - updated for maverick->natty now that the auto-upgrade-test server
       has more diskspace
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
