--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.147.6) UNRELEASED; urgency=low
+update-manager (1:0.147.6) natty; urgency=low
 
   * AutoUpgradeTester/profile/{euca-cloud,euca-nc,xubuntu}/DistUpgrade.cfg:
     - updated for maverick->natty now that the auto-upgrade-test server
@@ -13,7 +13,7 @@ update-manager (1:0.147.6) UNRELEASED; urgency=low
       even if that got disabled e.g. via synaptic (LP: #759262)
     - add test for this feature
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Apr 2011 10:40:17 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Apr 2011 10:05:29 +0200
 
 update-manager (1:0.147.5) natty; urgency=low
 
