* DistUpgrade/DistUpgradeQuirks.py, tests/test_quirks.py:   - don't print a error for already patched files, this removes     a misleading error from the upgrade logs   - update tests

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.150) natty; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py, tests/test_quirks.py:
+    - don't print a error for already patched files, this removes
+      a misleading error from the upgrade logs
+    - update tests
+  
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Apr 2011 10:09:02 +0200
+
 update-manager (1:0.147.6) natty; urgency=low
 
   * AutoUpgradeTester/profile/{euca-cloud,euca-nc,xubuntu}/DistUpgrade.cfg:
