--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-update-manager (1:0.150) UNRELEASED; urgency=low
+update-manager (1:0.150) natty; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py, tests/test_quirks.py:
     - don't print a error for already patched files, this removes
       a misleading error from the upgrade logs
     - update tests
   
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Apr 2011 14:09:52 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Apr 2011 14:25:15 +0200
 
 update-manager (1:0.147.6) natty; urgency=low
 
