--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.150.1) natty-proposed; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg:
+    - Remove 'dontzap' from kubuntu-desktops rules (LP: #769680).
+      This fixes a upgrade issue when a old package is leftover
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Apr 2011 11:33:32 +0200
+
 update-manager (1:0.150) natty; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py, tests/test_quirks.py:
