* DistUpgrade/DistUpgradeApport.py:   - do not report zero size crashfiles (LP: #772052)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low
+
+  [ Brian Murray ]
+  * DistUpgrade/DistUpgradeApport.py: 
+    - do not report zero size crashfiles (LP: #772052)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Apr 2011 16:59:15 +0200
+
 update-manager (1:0.150.1) natty-proposed; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
