--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low
+update-manager (1:0.150.2) natty-proposed; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
