enable apport and start it during distribution upgrades

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,12 @@ update-manager (1:0.150.2) natty-proposed; urgency=low
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
     - do not report zero size crashfiles (LP: #772052)
+  * DistUpgrade/DistUpgrade.cfg:
+    - enable apport for distribution upgrades (LP: #772913)
+  * DistUpgrade/DistUpgradeController.py:
+    - use service to start apport
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Apr 2011 16:59:15 +0200
+ -- Brian Murray <brian@ubuntu.com>  Thu, 28 Apr 2011 20:52:40 -0700
 
 update-manager (1:0.150.1) natty-proposed; urgency=low
 
