--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ update-manager (1:0.150.2) natty-proposed; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
-    - do not report zero size crashfiles (LP: #772052)
+    - do not report zero size attachments (LP: #772052)
   * DistUpgrade/DistUpgrade.cfg:
     - enable apport for distribution upgrades (LP: #772913)
   * DistUpgrade/DistUpgradeController.py:
