--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.150.2) natty-proposed; urgency=low
+update-manager (1:0.150.1) natty-proposed; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
@@ -8,15 +8,12 @@ update-manager (1:0.150.2) natty-proposed; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - use service to start apport
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 28 Apr 2011 20:52:40 -0700
-
-update-manager (1:0.150.1) natty-proposed; urgency=low
-
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgrade.cfg:
     - Remove 'dontzap' from kubuntu-desktops rules (LP: #769680).
       This fixes a upgrade issue when a old package is leftover
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Apr 2011 11:33:32 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Apr 2011 15:55:38 +0200
 
 update-manager (1:0.150) natty; urgency=low
 
