remove "kde-plasmoid-cwp" early as it will break upgrades later (LP: #773022)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low
+
+  * remove "kde-plasmoid-cwp" early as it will break upgrades
+    later (LP: #773022)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 09:52:35 +0200
+
 update-manager (1:0.150.1) natty-proposed; urgency=low
 
   [ Brian Murray ]
