* debian/control:   - point to "natty" branch

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low
 
+  * debian/control:
+    - point to "natty" branch
   * remove "kde-plasmoid-cwp" early as it will break upgrades
     later (LP: #773022)
 
