* DistUpgrade/*:   - updated for oneiric

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.151) UNRELEASED; urgency=low
 
   * merged lp:~evfool/update-manager/sectionchecks, many thanks
     to Robert Roth
+  * DistUpgrade/*:
+    - updated for oneiric
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 10:18:38 +0200
 
