fix arguments from "autInst" to "auto_inst" and "autoFix" -> "auto_fix"

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ update-manager (1:0.151) UNRELEASED; urgency=low
     to Robert Roth
   * DistUpgrade/*:
     - updated for oneiric
+  * fix arguments from "autInst" to "auto_inst" and
+    "autoFix" -> "auto_fix"
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 10:18:38 +0200
 
