--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151) UNRELEASED; urgency=low
+update-manager (1:0.151) oneiric; urgency=low
 
   * merged lp:~evfool/update-manager/sectionchecks, many thanks
     to Robert Roth
@@ -7,7 +7,7 @@ update-manager (1:0.151) UNRELEASED; urgency=low
   * fix arguments from "autInst" to "auto_inst" and
     "autoFix" -> "auto_fix"
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 10:18:38 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 14:25:55 +0200
 
 update-manager (1:0.150.2) natty-proposed; urgency=low
 
