update changelog, add FIXME, move gir stuff to optional

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+update-manager (1:0.152) UNRELEASEDoneiric; urgency=low
+
+  * merged lp:~bilalakhtar/update-manager/unity-quicklist,  many
+    thanks to Bilal Akhtar for adding quickly support
+  * merged lp:~mvo/update-manager/for-unity to make the support
+    optional and to add updates count into the update-manager 
+    icon in unity
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 18:09:23 +0200
+
 update-manager (1:0.151) oneiric; urgency=low
 
   * merged lp:~evfool/update-manager/sectionchecks, many thanks
