--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152) UNRELEASEDoneiric; urgency=low
+update-manager (1:0.151.1) oneiric; urgency=low
 
   * merged lp:~bilalakhtar/update-manager/unity-quicklist,  many
     thanks to Bilal Akhtar for adding quickly support
@@ -6,7 +6,7 @@ update-manager (1:0.152) UNRELEASEDoneiric; urgency=low
     optional and to add updates count into the update-manager 
     icon in unity
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 18:09:23 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 18:15:21 +0200
 
 update-manager (1:0.151) oneiric; urgency=low
 
