do-release-upgrade: display version of the new release available not the code name

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 update-manager (1:0.151.2) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * merged 
     lp:~brendan-donegan/update-manager/bug699660-fix-settings-shortcut
     thanks to Brendan Donegan
+ 
+  [ Brian Murray ]
+  * do-release-upgrade: display version of the new release available not the
+    code name
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 May 2011 09:51:39 +0200
 
