--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151.2) UNRELEASED; urgency=low
+update-manager (1:0.151.3) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
   * merged 
@@ -10,6 +10,12 @@ update-manager (1:0.151.2) UNRELEASED; urgency=low
     code name
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 May 2011 09:51:39 +0200
+
+update-manager (1:0.151.2) oneiric; urgency=low
+
+  * fix UnitySupport import
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 16 May 2011 12:14:26 +0200
 
 update-manager (1:0.151.1) oneiric; urgency=low
 
