* AutoUpgradeTester/profile/*:   - updated for natty->oneiric

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ update-manager (1:0.151.3) UNRELEASED; urgency=low
   * merged 
     lp:~brendan-donegan/update-manager/bug699660-fix-settings-shortcut
     thanks to Brendan Donegan
+  * AutoUpgradeTester/profile/*:
+    - updated for natty->oneiric
  
   [ Brian Murray ]
   * do-release-upgrade: display version of the new release available not the
