--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ update-manager (1:0.151.3) UNRELEASED; urgency=low
     thanks to Brendan Donegan
   * AutoUpgradeTester/profile/*:
     - updated for natty->oneiric
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - use VteTerminal "child-exit" signal instead of the Reaper object
  
   [ Brian Murray ]
   * do-release-upgrade: display version of the new release available not the
