optionally use webkit for the release notes viewer

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ update-manager (1:0.151.3) UNRELEASED; urgency=low
     - updated for natty->oneiric
   * DistUpgrade/DistUpgradeViewGtk.py:
     - use VteTerminal "child-exit" signal instead of the Reaper object
+  * optionally use webkit for the release notes viewer
  
   [ Brian Murray ]
   * do-release-upgrade: display version of the new release available not the
