--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ update-manager (1:0.151.3) UNRELEASED; urgency=low
   [ Brian Murray ]
   * do-release-upgrade: display version of the new release available not the
     code name
+  * add an apport hook for update-manager and modify bug reporting
+    instructions to recommend using apport (LP: #721382)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 May 2011 09:51:39 +0200
 
