--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151.3) UNRELEASED; urgency=low
+update-manager (1:0.151.3) oneiric; urgency=low
 
   [ Michael Vogt ]
   * merged 
@@ -16,7 +16,7 @@ update-manager (1:0.151.3) UNRELEASED; urgency=low
   * add an apport hook for update-manager and modify bug reporting
     instructions to recommend using apport (LP: #721382)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 May 2011 09:51:39 +0200
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Fri, 03 Jun 2011 11:32:45 -0700
 
 update-manager (1:0.151.2) oneiric; urgency=low
 
