--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ update-manager (1:0.151.4) UNRELEASED; urgency=low
   * merged lp:~brendan-donegan/update-manager/bug791548_networkmanager0.9,
     many thanks
   * merged lp:~evfool/update-manager/fixmbcount, many thanks
+  * show progress inside unity, thanks to Bilal Akhtar for the initial
+    version of the patch!
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jun 2011 15:49:42 +0200
 
