* DistUpgrade/DistUpgradeQuirks.py:   - warn intel i8xx user that the upgrade to oneiric may cause     issues with their particular graphics hardware (LP: #774999)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,12 @@
-update-manager (1:0.151.4) UNRELEASED; urgency=low
+update-manager (1:0.151.5) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - warn intel i8xx user that the upgrade to oneiric may cause
+      issues with their particular graphics hardware (LP: #774999)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Jun 2011 17:55:53 +0200
+
+update-manager (1:0.151.4) oneiric; urgency=low
 
   [ Robert Roth ]
   * Fix problem of showing only integer MB count and causing 
@@ -15,7 +23,7 @@ update-manager (1:0.151.4) UNRELEASED; urgency=low
   * show progress inside unity, thanks to Bilal Akhtar for the initial
     version of the patch!
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jun 2011 15:49:42 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jun 2011 16:19:48 +0200
 
 update-manager (1:0.151.3) oneiric; urgency=low
 
