--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151.5) UNRELEASED; urgency=low
+update-manager (1:0.151.5) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
     - warn intel i8xx user that the upgrade to oneiric may cause
@@ -6,7 +6,7 @@ update-manager (1:0.151.5) UNRELEASED; urgency=low
   * merge patch from "eapache" to fix the unity progress bars
     (LP: #796311)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Jun 2011 17:55:53 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Jun 2011 18:04:27 +0200
 
 update-manager (1:0.151.4) oneiric; urgency=low
 
