* pre-build.sh:   - automatically include apt_btrfs_snapshot.py in the release     uprader tarball

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.151.6) oneiric; urgency=low
+
+  * pre-build.sh:
+    - automatically include apt_btrfs_snapshot.py in the release
+      uprader tarball
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Jun 2011 15:37:08 +0200
+
 update-manager (1:0.151.5) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
