--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
+update-manager (1:0.151.7) oneiric; urgency=low
+
+  * fix apt-btfs-snapshot releated crash
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Jun 2011 11:42:16 +0200
+
 update-manager (1:0.151.6) oneiric; urgency=low
 
   * pre-build.sh:
     - automatically include apt_btrfs_snapshot.py in the release
       uprader tarball
-  * fix apt-btfs-snapshot releated crash
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Jun 2011 15:37:08 +0200
 
