* DistUpgrade/DistUpgradeViewGtk.py:   - set DPKG_UNTRANSLATED_MESSAGES to force untranslated dpkg     terminal messages for easier package failure duplication     detection

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.151.8) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - set DPKG_UNTRANSLATED_MESSAGES to force untranslated dpkg
+      terminal messages for easier package failure duplication 
+      detection
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 28 Jun 2011 10:04:00 +0100
+
 update-manager (1:0.151.7) oneiric; urgency=low
 
   * fix apt-btfs-snapshot releated crash
