--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151.8) UNRELEASED; urgency=low
+update-manager (1:0.151.8) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeViewGtk.py:
     - set DPKG_UNTRANSLATED_MESSAGES to force untranslated dpkg
@@ -8,8 +8,10 @@ update-manager (1:0.151.8) UNRELEASED; urgency=low
     - when calculating the size of the space required in /boot use
       the size of the currently running kernel as the base and add
       a small safety margin (LP: #798462). 
+  * import new apt-btrfs-snapshot to fix crash for certain fstab
+    entries (LP: #806065)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 28 Jun 2011 10:04:00 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Jul 2011 17:23:26 +0200
 
 update-manager (1:0.151.7) oneiric; urgency=low
 
