do not crash if lspci is not installed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.151.9) UNRELEASED; urgency=low
+
+  * do not crash if lspci is not installed
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Jul 2011 20:56:04 +0200
+
 update-manager (1:0.151.8) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeViewGtk.py:
