--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.151.9) UNRELEASED; urgency=low
+update-manager (1:0.151.9) oneiric; urgency=low
 
   * do not crash if lspci is not installed
   * merged lp:~brian-murray/update-manager/apport-hook-changes,
@@ -6,7 +6,7 @@ update-manager (1:0.151.9) UNRELEASED; urgency=low
   * merged lp:~eapache/update-manager/unity-urgency-hint, many
     thanks to Evan Huus (LP: #799173)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Jul 2011 20:56:04 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 07 Jul 2011 11:16:14 +0200
 
 update-manager (1:0.151.8) oneiric; urgency=low
 
