fix install file, add changelog, fix crash in update-manager

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.152) UNRELEASED; urgency=low
+
+  * ported to gtk3/GI
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 07 Jul 2011 16:49:12 +0200
+
 update-manager (1:0.151.9) oneiric; urgency=low
 
   * do not crash if lspci is not installed
