--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 update-manager (1:0.152) UNRELEASED; urgency=low
 
   * ported to gtk3/GI
+  * port from gconf to gsettings
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 07 Jul 2011 16:49:12 +0200
 
