--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152) UNRELEASED; urgency=low
+update-manager (1:0.152) oneiric; urgency=low
 
   * ported to gtk3/GI
   * port from gconf to gsettings
@@ -6,7 +6,7 @@ update-manager (1:0.152) UNRELEASED; urgency=low
     - depend on python-gobject with overwrite bugfixes needed
       for update-manager
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 07 Jul 2011 16:49:12 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jul 2011 12:25:03 +0200
 
 update-manager (1:0.151.10) oneiric; urgency=low
 
