fix release upgrade view dialog in gtk3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.152.1) UNRELEASED; urgency=low
+
+  * fix release upgrade view dialog in gtk3
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jul 2011 13:06:14 +0200
+
 update-manager (1:0.152) oneiric; urgency=low
 
   * ported to gtk3/GI
