--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.1) UNRELEASED; urgency=low
+update-manager (1:0.152.1) oneiric; urgency=low
 
   * fix release upgrade view dialog in gtk3
   * UpdateManager/UpdateManager.py, check-new-release-gtk:
@@ -8,7 +8,7 @@ update-manager (1:0.152.1) UNRELEASED; urgency=low
   * check-new-release-gtk, tests/test_end_of_life.py:
     - fix test failures
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jul 2011 13:06:14 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 11 Jul 2011 11:19:29 +0200
 
 update-manager (1:0.152) oneiric; urgency=low
 
