--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-update-manager (1:0.152.2) UNRELEASED; urgency=low
+update-manager (1:0.152.2) oneiric; urgency=low
 
   * data/update-manager.convert:
     - ship gconf->gsettings convert script
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 14 Jul 2011 09:53:04 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 14 Jul 2011 10:01:18 +0200
 
 update-manager (1:0.152.1) oneiric; urgency=low
 
