remove unneeded GConf imports (we are using gsettings now) LP: #807715

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.3) UNRELEASED; urgency=low
+
+  * remove unneeded GConf imports (we are using gsettings now)
+    LP: #807715
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Jul 2011 16:43:46 +0200
+
 update-manager (1:0.152.2) oneiric; urgency=low
 
   * data/update-manager.convert:
