make UpdateManager/, tests/ pyflakes clean

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ update-manager (1:0.152.3) UNRELEASED; urgency=low
 
   * remove unneeded GConf imports (we are using gsettings now)
     LP: #807715
+  * make UpdateManager/, tests/ pyflakes clean
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Jul 2011 16:43:46 +0200
 
