--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-update-manager (1:0.152.3) UNRELEASED; urgency=low
+update-manager (1:0.152.3) oneiric; urgency=low
 
   * remove unneeded GConf imports (we are using gsettings now)
     LP: #807715
-  * make UpdateManager/, tests/ pyflakes clean
+  * a good bunch of pyflakes fixes
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Jul 2011 16:43:46 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Jul 2011 18:00:37 +0200
 
 update-manager (1:0.152.2) oneiric; urgency=low
 
