--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.4) UNRELEASED; urgency=low
+update-manager (1:0.152.4) oneiric; urgency=low
 
   * merged lp:~evfool/update-manager/fix622489, many thanks
     to "FooBar" and Robert Roth (evfool)
@@ -6,7 +6,7 @@ update-manager (1:0.152.4) UNRELEASED; urgency=low
     query string similar to ubiquity to allow more specific
     release notes
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Jul 2011 10:01:13 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 19 Jul 2011 09:45:28 +0200
 
 update-manager (1:0.152.3) oneiric; urgency=low
 
