* DistUpgrade/DistUpgrade{Cache,Controller}.py:   - if  btrfs snapshots are used, add the additional required     diskspace requierd into the free space calculation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.152.5) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgrade{Cache,Controller}.py:
+    - if  btrfs snapshots are used, add the additional required 
+      diskspace requierd into the free space calculation
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 19 Jul 2011 11:09:08 +0200
+
 update-manager (1:0.152.4) oneiric; urgency=low
 
   * merged lp:~evfool/update-manager/fix622489, many thanks
