* debian/{rules,control}:   - move to debhelper 7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-update-manager (1:0.152.5) UNRELEASED; urgency=low
+update-manager (1:0.152.5) UNRELEASEDoneiric; urgency=low
 
   * DistUpgrade/DistUpgrade{Cache,Controller}.py:
     - if  btrfs snapshots are used, add the additional required 
       diskspace requierd into the free space calculation
+  * debian/{rules,control}:
+    - move to debhelper 7
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 19 Jul 2011 11:09:08 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jul 2011 09:34:15 +0200
 
 update-manager (1:0.152.4) oneiric; urgency=low
 
