--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.5) UNRELEASEDoneiric; urgency=low
+update-manager (1:0.152.5) oneiric; urgency=low
 
   * DistUpgrade/DistUpgrade{Cache,Controller}.py:
     - if  btrfs snapshots are used, add the additional required 
@@ -6,7 +6,7 @@ update-manager (1:0.152.5) UNRELEASEDoneiric; urgency=low
   * debian/{rules,control}:
     - move to debhelper 7
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jul 2011 09:34:15 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jul 2011 10:09:49 +0200
 
 update-manager (1:0.152.4) oneiric; urgency=low
 
