Only build dist-upgrader tarball in the binary-indep target (LP: #813867)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.152.6) oneiric; urgency=low
+
+  * Only build dist-upgrader tarball in the binary-indep target,
+    fixing both the non-x86 build failures, and Soyuz having a
+    hissy fit over multiple identically-named files (LP: #813867)
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Thu, 21 Jul 2011 00:24:32 -0600
+
 update-manager (1:0.152.5) oneiric; urgency=low
 
   * DistUpgrade/DistUpgrade{Cache,Controller}.py:
