add jenkins slave setup (config, upstart job), similar to the server-isotesting  (disabled by default)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.152.7) UNRELEASED; urgency=low
 
   * merged lp:~mterry/update-manager/813778 to fix crash in 
     initCache() LP: #813778. Many thanks to Michael Terry
+  * add jenkins slave setup (config, upstart job), similar to the
+    server-isotesting  (disabled by default)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 21 Jul 2011 10:55:16 +0200
 
