* DistUpgrade/DistUpgrade.ui:   - add minimal size for the details expander (and let glade     reindent/reformat the entire file along the way)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ update-manager (1:0.152.7) UNRELEASED; urgency=low
     initCache() LP: #813778. Many thanks to Michael Terry
   * add jenkins slave setup (config, upstart job), similar to the
     server-isotesting  (disabled by default)
+  * DistUpgrade/DistUpgrade.ui:
+    - add minimal size for the details expander (and let glade 
+      reindent/reformat the entire file along the way)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 21 Jul 2011 10:55:16 +0200
 
