--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.7) UNRELEASED; urgency=low
+update-manager (1:0.152.7) oneiric; urgency=low
 
   [ Michael Vogt ]
   * merged lp:~mterry/update-manager/813778 to fix crash in 
@@ -18,7 +18,7 @@ update-manager (1:0.152.7) UNRELEASED; urgency=low
     (LP: #537942)
   * Rename Check all/Uncheck all to Select/Deselect all
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 21 Jul 2011 10:55:16 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 25 Jul 2011 18:44:45 +0200
 
 update-manager (1:0.152.6) oneiric; urgency=low
 
