--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ update-manager (1:0.152.8) UNRELEASED; urgency=low
   * Update last updated text every 15 minutes in the first hour
     after update (LP: #747336). Thanks to Fredrik Ekelund.
 
+  [ Michael Vogt ]
+  * UpdateManager/UpdateManager.py, data/glade/UpdateManager.ui:
+    - remove old manual text wrap code that is now superseeded by
+      gtk3
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jul 2011 09:53:13 +0200
 
 update-manager (1:0.152.7) oneiric; urgency=low
