--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.8) UNRELEASED; urgency=low
+update-manager (1:0.152.8) oneiric; urgency=low
 
   [ Robert Roth ]
   * Ordered the packages alphabetically on the dist-upgrade
@@ -9,9 +9,12 @@ update-manager (1:0.152.8) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * UpdateManager/UpdateManager.py, data/glade/UpdateManager.ui:
     - remove old manual text wrap code that is now superseeded by
-      gtk3
+      gtk3 (LP: #812949)
+  * data/glade/UpdateManager.ui:
+    - fix the xalign and expand properties of the various alert
+      labels
   
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jul 2011 09:53:13 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jul 2011 10:42:31 +0200
 
 update-manager (1:0.152.7) oneiric; urgency=low
 
