* remove old UpdateManager.glade file * rename data/glade to data/gtkbuilder

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.9) UNRELEASED; urgency=low
+
+  * remove old UpdateManager.glade file
+  * rename data/glade to data/gtkbuilder
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jul 2011 10:47:58 +0200
+
 update-manager (1:0.152.8) oneiric; urgency=low
 
   [ Robert Roth ]
