--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.9) UNRELEASED; urgency=low
+update-manager (1:0.152.9) oneiric; urgency=low
 
   * remove old UpdateManager.glade file
   * rename data/glade to data/gtkbuilder
@@ -9,7 +9,7 @@ update-manager (1:0.152.9) UNRELEASED; urgency=low
       /etc/kernel/postinst.d to ensure we always have a good grub
       config and not depend on the package upgrade ordering for that
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 27 Jul 2011 10:47:58 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 28 Jul 2011 16:59:58 +0200
 
 update-manager (1:0.152.8) oneiric; urgency=low
 
