* debian/control:   - fix dependency on python-aptdaemon.gtk3widgets

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 update-manager (1:0.152.10) UNRELEASED; urgency=low
 
   * merged lp:~evfool/update-manager/pkgsections, many thanks
+  * debian/control:
+    - fix dependency on python-aptdaemon.gtk3widgets
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Jul 2011 09:57:23 +0200
 
