* DistUpgrade/DistUpgradeController.py:   - when upgrading do not disable deb-src entries in /etc/apt/sources.list * DistUpgrade/DistUpgradeMain.py:   - string fix thanks to David Stansby for the fix (LP: #510681)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
 update-manager (1:0.152.10) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * merged lp:~evfool/update-manager/pkgsections, many thanks
   * debian/control:
     - fix dependency on python-aptdaemon.gtk3widgets
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Jul 2011 09:57:23 +0200
+  [ Brian Murray ]
+  * DistUpgrade/DistUpgradeController.py:
+    - when upgrading do not disable deb-src entries in /etc/apt/sources.list
+  * DistUpgrade/DistUpgradeMain.py:
+    - string fix thanks to David Stansby for the fix (LP: #510681)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 29 Jul 2011 07:21:22 -0700
 
 update-manager (1:0.152.9) oneiric; urgency=low
 
