* DistUpgrade/DistUpgradeController.py:   - only ask for a reboot if the upgrade is not running inside a     chroot

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ update-manager (1:0.152.10) UNRELEASED; urgency=low
   * merged lp:~evfool/update-manager/pkgsections, many thanks
   * debian/control:
     - fix dependency on python-aptdaemon.gtk3widgets
+  * DistUpgrade/DistUpgradeController.py:
+    - only ask for a reboot if the upgrade is not running inside a
+      chroot
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py:
