--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.10) UNRELEASED; urgency=low
+update-manager (1:0.152.10) oneiric; urgency=low
 
   [ Michael Vogt ]
   * merged lp:~evfool/update-manager/pkgsections, many thanks
@@ -19,7 +19,7 @@ update-manager (1:0.152.10) UNRELEASED; urgency=low
     not found (LP: #821345)
   * Fix operation between NoneType and int (LP: #820126)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 29 Jul 2011 07:21:22 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 05 Aug 2011 14:16:15 +0200
 
 update-manager (1:0.152.9) oneiric; urgency=low
 
