--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.152.11) oneiric; urgency=low
+
+  * DistUpgrade/DistUpgradeViewGtk3.py:
+    - use vte.for_command_full() instead of fork_command() as 
+      fork_command is no longer available in the gir-2.90
+      (LP: #808738)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 15:27:46 +0200
+
 update-manager (1:0.152.10) oneiric; urgency=low
 
   [ Michael Vogt ]
