* AutoUpgradeTester/UpgradeTestBackendQemu.py:   - add NonInterative/AddRepoUpgradeImmediately option that allows     installing test package *before* the test upgrade runs (useful     for e.g. testing a new apt or dpkg)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.152.12) unstable; urgency=low
+
+  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
+    - add NonInterative/AddRepoUpgradeImmediately option that allows
+      installing test package *before* the test upgrade runs (useful
+      for e.g. testing a new apt or dpkg)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 09:24:20 +0200
+
 update-manager (1:0.152.11) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeViewGtk3.py:
