--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.12) UNRELEASED; urgency=low
+update-manager (1:0.152.12) oneiric; urgency=low
 
   [ Michael Vogt ]
   * AutoUpgradeTester/UpgradeTestBackendQemu.py:
@@ -10,8 +10,9 @@ update-manager (1:0.152.12) UNRELEASED; urgency=low
   * Added default value to be able to start UpdateManager without 
     having gir-unity installed (LP: #823935)
   * Fixed changelog test with the new wording
+  * Specify default -1 length for terminal response (LP: #817785)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 09:24:20 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 17:58:35 +0200
 
 update-manager (1:0.152.11) oneiric; urgency=low
 
@@ -19,8 +20,6 @@ update-manager (1:0.152.11) oneiric; urgency=low
     - use vte.for_command_full() instead of fork_command() as 
       fork_command is no longer available in the gir-2.90
       (LP: #808738)
-  * merged lp:~evfool/update-manager/fix817785, many thanks 
-    to Robert Roth (LP: #817785)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 15:27:46 +0200
 
