* debian/control:   - bump unity dependency to gir1.2-unity-4.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ update-manager (1:0.152.13) UNRELEASED; urgency=low
 
   [ Robert Roth ]
   * Fix link context menu in changelog viewer (LP: #824957)
+  
+  [ Michael Vogt ]
+  * debian/control:
+    - bump unity dependency to gir1.2-unity-4.0 
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Aug 2011 11:23:05 +0200
 
