--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.13) UNRELEASED; urgency=low
+update-manager (1:0.152.13) oneiric; urgency=low
 
   [ Robert Roth ]
   * Fix link context menu in changelog viewer (LP: #824957)
@@ -7,7 +7,7 @@ update-manager (1:0.152.13) UNRELEASED; urgency=low
   * debian/control:
     - bump unity dependency to gir1.2-unity-4.0 
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Aug 2011 11:23:05 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Aug 2011 17:45:51 +0200
 
 update-manager (1:0.152.12) oneiric; urgency=low
 
