--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.14) oneiric; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - enable multiarch on amd64 during the upgrade
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Aug 2011 09:52:51 +0200
+
 update-manager (1:0.152.13) oneiric; urgency=low
 
   [ Robert Roth ]
