add new "PreCacheOpen" hook and use it for the multiarch enabling

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.152.14) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
     - enable multiarch on amd64 during the upgrade
+    - add new "PreCacheOpen" hook and use it for the multiarch 
+      enabling
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Aug 2011 09:52:51 +0200
 
