--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ update-manager (1:0.152.14) oneiric; urgency=low
     - enable multiarch on amd64 during the upgrade
     - add new "PreCacheOpen" hook and use it for the multiarch 
       enabling
+  * DistUpgrade/DistUpgradeCache.py:
+    - when checking for missing "priority: required" packages 
+      ignore the foreign architecture ones
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Aug 2011 09:52:51 +0200
 
