* DistUpgrade/DistUpgradeApport.py:   - properly add the tag 'dist-upgrade' to the bug report

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.15) oneiric; urgency=low
+
+  * DistUpgrade/DistUpgradeApport.py: 
+    - properly add the tag 'dist-upgrade' to the bug report
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 16 Aug 2011 06:12:55 -0700
+
 update-manager (1:0.152.14) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
